[gd_scene load_steps=5 format=3 uid="uid://c6jt7mt63yw4y"]

[ext_resource type="Script" path="res://Pantallas/creditos.gd" id="1_flsdi"]
[ext_resource type="Texture2D" uid="uid://b5lmr34ew1cm0" path="res://Imagenes_pantallas/Editable.png" id="1_k6wxx"]
[ext_resource type="FontFile" uid="uid://dmeyw850i2eyb" path="res://Fuentes/nosferatu/Nosfo___.ttf" id="3_lkajn"]
[ext_resource type="FontFile" uid="uid://s73cy3w58bc7" path="res://Fuentes/nosferatu/NO.TTF" id="4_43fot"]

[node name="Creditos" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_flsdi")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_k6wxx")
expand_mode = 1

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.5
offset_right = 32.5
offset_bottom = 23.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_lkajn")
text = "Creditos"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -51.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_lkajn")
theme_override_font_sizes/font_size = 14
text = "Desarrollo Principal: BastianBone
Programacion: Juan Prieto
Diseño de juego: Juan Prieto
Sonido y música: Suno (IA)
Agradecimientos: especiales: Familia Pm"
horizontal_alignment = 2
autowrap_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -101.0
offset_right = 87.0
grow_vertical = 0
theme_override_constants/separation = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_lkajn")
text = "Redes"
horizontal_alignment = 1

[node name="Tiktok" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_43fot")
text = "Tiktok"

[node name="IG" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_43fot")
text = "Instagram"

[node name="Art" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_43fot")
text = "Artstation"

[connection signal="pressed" from="VBoxContainer/Tiktok" to="." method="_on_tiktok_pressed"]
[connection signal="pressed" from="VBoxContainer/IG" to="." method="_on_ig_pressed"]
[connection signal="pressed" from="VBoxContainer/Art" to="." method="_on_art_pressed"]
